--- a/agent/package.json
+++ b/agent/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@tempo/contracts": "workspace:*",
     "better-sqlite3": "^12.5.0"
   }
 }
