--- a/ui/package.json
+++ b/ui/package.json
@@ -10,18 +10,20 @@
     "electron:dev": "concurrently -k \"pnpm run dev\" \"wait-on tcp:127.0.0.1:5173 && NODE_ENV=development electron . --no-sandbox\""
   },
   "dependencies": {
+    "@tempo/contracts": "workspace:*",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tempo/contracts": "workspace:*"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "concurrently": "^8.0.0",
     "electron": "^25.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.3.0",
-    "concurrently": "^8.0.0",
     "wait-on": "^7.0.0"
   }
 }
