--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,23 +1,33 @@
 {
     "name": "@tempo/cli",
     "version": "1.0.0",
-    "description": "CLI for Tempo",
+    "description": "CLI for Tempo - Local-first developer activity tracker",
     "main": "dist/index.js",
     "bin": {
         "tempo": "dist/index.js"
     },
+    "files": [
+        "dist"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "build": "tsc",
         "dev": "tsc && node dist/index.js stats",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "commander": "^11.0.0",
+        "@tempo/contracts": "workspace:*",
+        "chalk": "^4.1.2",
         "cli-table3": "^0.6.3",
+        "commander": "^11.0.0",
         "date-fns": "^2.30.0",
-        "@tempo/contracts": "workspace:*"
+        "inquirer": "^8.2.6"
     },
     "devDependencies": {
+        "@types/inquirer": "^8.2.12",
         "@types/node": "^20.0.0",
         "typescript": "^5.0.0"
     }
