fix(agent): repair build process, persistence, icons, and cleanup
- Agent: Added tsc compilation step to package script to prevent stale code in binary.

- UI: Implemented System Tray support; window now minimizes to tray on close.

- UI: Configured Linux application icons and extraResources.

- Extension: Added metadata (repository, license, icon) to VS Code manifest.

- Cleanup: Updated .gitignore to exclude build artifacts and debug logs.

--- a/agent/package.json
+++ b/agent/package.json
@@ -9,13 +9,16 @@
   "scripts": {
     "dev": "ts-node src/main.ts",
     "build": "tsc",
-    "package": "pkg .",
+    "package": "rm -rf node_modules && pnpm install && pnpm run build && npm_config_target=18.0.0 npm_config_arch=x64 npm_config_target_platform=linux npm_config_build_from_source=true pnpm rebuild better-sqlite3 && mkdir -p native && cp node_modules/better-sqlite3/build/Release/better_sqlite3.node native/ && pkg . && pnpm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "pkg": {
     "scripts": "dist/**/*.js",
     "targets": [
       "node18-linux-x64"
+    ],
+    "assets": [
+      "native/better_sqlite3.node"
     ]
   },
   "keywords": [],
