--- a/.github/workflows/extension-release.yml
+++ b/.github/workflows/extension-release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Package Extension
         run: |
           cd vscode-extension
-          vsce package --no-dependencies
+          vsce package
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
