--- a/.github/workflows/extension-release.yml
+++ b/.github/workflows/extension-release.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Package Extension
         run: |
           cd vscode-extension
-          vsce package
+          vsce package --no-dependencies
+        # vsce publish -p ${{ secrets.VSCE_PAT }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
